--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "3.8.18"
 gym-super-mario-bros = "^7.4.0"
 gym = "0.19.0"
 pyglet = "^2.0.14"
+stable-baselines3 = "^2.3.0"
+opencv-python = "^4.9.0"
 
 
 [build-system]
