--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,21 @@ name = "rl-mario"
 version = "0.1.0"
 description = "This repository contains a reinforcement learning project focused on the Super Mario Bros game. The aim is to develop an AI agent capable of playing the game, using reinforcement learning techniques and algorithms."
 authors = ["Your Name <you@example.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "3.8.18"
+python = "3.9.18"
 gym-super-mario-bros = "^7.4.0"
-gym = "0.19.0"
 pyglet = "^2.0.14"
 stable-baselines3 = "^2.3.0"
 opencv-python = "^4.9.0"
+gym = "0.26.0"
+tensorflow = "2.14.0"
+tensorflow-metal = "^1.1.0"
+tensordict = "0.3.0"
+torchrl = "0.3.0"
+torch = "2.2.2"
+torchvision = "^0.17.2"
 
 
 [build-system]
